--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Av$hek | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -46,12 +46,12 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Av$hek</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the front-end Developer, what you need.
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
+          <a class="cta-btn cta-btn--hero" target="_blank" href="https://avishek2021.netlify.app">Know more</a>
         </p>
       </div>
     </div>
@@ -67,10 +67,9 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image">
               <img
-                class="img-fluid rounded shadow-lg"
                 height="auto"
-                width="300px"
-                src="./assets/profile.jpg"
+                width="400px"
+                src="./assets/profile.png"
                 alt="Profile Image"
               />
             </div>
@@ -90,7 +89,7 @@
                 fuga numquam voluptate architecto itaque molestiae.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--resume" target="_blank" href="https://drive.google.com/file/d/1WkJXFeTvJ1hyI6v0nsh-CwWOUu666GPJ/view?usp=sharing">
                   View Resume
                 </a>
               </span>
@@ -223,13 +222,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            If you like my work, You can appreciate me at.
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:ak251997@gmail.com"
+            >Send Mail</a
           >
         </div>
       </div>
@@ -261,7 +260,7 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
+          © 2021 - Template developed by <a href="https://github.com/Avishek-kr" target="_blank">Av$hek Parsahar</a>
           </a>
         </p>
 
@@ -269,7 +268,7 @@
         <p class="mt-3 pt-3">
           <a
             class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
+            href="https://github.com/Avishek-kr/fork"
             data-icon="octicon-repo-forked"
             data-size="large"
             data-show-count="true"
@@ -278,11 +277,11 @@
           >
           <a
             class="github-button"
-            href="https://github.com/cobidev/simplefolio"
+            href="https://github.com/Avishek-kr"
             data-icon="octicon-star"
             data-size="large"
             data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
+            aria-label="Star Avishek-kr/simplefolio on GitHub"
             >Star</a
           >
         </p>
